--- a/privacy/index.html
+++ b/privacy/index.html
@@ -67,7 +67,7 @@
   <meta name="description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." />
 
   
-  <link rel="alternate" hreflang="en-us" href="https://example.com/privacy/" />
+  <link rel="alternate" hreflang="en-us" href="https://jensoehlen.github.io/privacy/" />
 
   
   
@@ -282,7 +282,7 @@
   <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png" />
   <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_180x180_fill_lanczos_center_3.png" />
 
-  <link rel="canonical" href="https://example.com/privacy/" />
+  <link rel="canonical" href="https://jensoehlen.github.io/privacy/" />
 
   
   
@@ -308,10 +308,10 @@
     <meta property="twitter:creator" content="@wowchemy" />
   
   <meta property="og:site_name" content="Academic" />
-  <meta property="og:url" content="https://example.com/privacy/" />
+  <meta property="og:url" content="https://jensoehlen.github.io/privacy/" />
   <meta property="og:title" content="Privacy Policy | Academic" />
-  <meta property="og:description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://example.com/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
-    <meta property="twitter:image" content="https://example.com/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+  <meta property="og:description" content="Add your privacy policy here and set draft: false to publish it. Otherwise, delete this file if you don&rsquo;t need it." /><meta property="og:image" content="https://jensoehlen.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+    <meta property="twitter:image" content="https://jensoehlen.github.io/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
       <meta
