solve liquid error

--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -15,12 +15,12 @@
     <link rel="manifest" href="/manifest.webmanifest">
   
 
-  <link rel="icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_32x32_fill_lanczos_center_3.png">
-  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_192x192_fill_lanczos_center_3.png">
+  <link rel="icon" type="image/png" href="/media/icon_hu409803ac8334c91dbbc53d54c0ba1231_9895139_32x32_fill_lanczos_center_3.png">
+  <link rel="apple-touch-icon" type="image/png" href="/media/icon_hu409803ac8334c91dbbc53d54c0ba1231_9895139_192x192_fill_lanczos_center_3.png">
 
   <link rel="canonical" href="https://jensoehlen.github.io/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Jens Oehlen</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.2.1/dist/reveal.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.2.1/dist/theme/black.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.2.1/build/styles/dracula.min.css" crossorigin="anonymous" id="highlight-theme">
 
