--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
 <p>I&rsquo;m a PhD student in economics at Stockholm University supervised by David Strömberg and Torsten Persson. In the coming academic year (2022/23) I will be visiting Stanford University.</p>
 <p>I&rsquo;m an applied microeconomist interested in political and media economics as well as economics of science.</p>
 <p>
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/cv.pdf" target="_blank">CV</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/20220706cv.pdf" target="_blank">CV</a>.</p>
 
     </div>
 
