--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/20230430cv.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/cv.pdf"><span>CV</span></a>
           </li>
 
           
@@ -906,7 +906,7 @@
 <p>I&rsquo;m a PhD student in economics at Stockholm University supervised by David Strömberg and Torsten Persson.</p>
 <p>I&rsquo;m an applied microeconomist interested in political economics and the economics of science and innovation.</p>
 <p>
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/20240323cv.pdf" target="_blank">CV</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/cv.pdf" target="_blank">CV</a>.</p>
 
     </div>
 
