--- a/index.html
+++ b/index.html
@@ -903,8 +903,8 @@
 
     <div class="article-style">
       <p>Hi, <br></p>
-<p>I&rsquo;m a PhD student in economics at Stockholm University supervised by David Strömberg and Torsten Persson.</p>
-<p>I&rsquo;m an applied microeconomist interested in political economics, economic history and the economics of science and innovation.</p>
+<p>I&rsquo;m a PhD student in economics at Stockholm University. I work on questions in political economics, economic history and the economics of science and innovation.</p>
+<p>References: David Strömberg, Torsten Persson</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/cv.pdf" target="_blank">CV</a>.</p>
 
