--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/cv.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/202504cv.pdf"><span>CV</span></a>
           </li>
 
           
@@ -906,7 +906,7 @@
 <p>I&rsquo;m a PhD student at Stockholm University. I work on questions in political economics, economic history, and the economics of science and innovation.</p>
 <p>References: David Strömberg, Torsten Persson</p>
 <p>
-  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/cv.pdf" target="_blank">CV</a>.</p>
+  <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/202504cv.pdf" target="_blank">CV</a>.</p>
 
     </div>
 
@@ -1421,7 +1421,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2025 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
