--- a/home/index.html
+++ b/home/index.html
@@ -572,7 +572,7 @@ Homepage is headless, other widget pages are not. headless: true " /><meta prope
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/cv.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/202504cv.pdf"><span>CV</span></a>
           </li>
 
           
@@ -887,7 +887,7 @@ Homepage is headless, other widget pages are not. headless: true " /><meta prope
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2025 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
