update some things

--- a/home/index.html
+++ b/home/index.html
@@ -572,7 +572,7 @@ Homepage is headless, other widget pages are not. headless: true " /><meta prope
           
 
           <li class="nav-item">
-            <a class="nav-link " href="/uploads/2025-06-cv.pdf"><span>CV</span></a>
+            <a class="nav-link " href="/uploads/cv.pdf"><span>CV</span></a>
           </li>
 
           
